syntax = "proto3";

package pb;

import "number_msg.proto";

option go_package = "./pb";

service ArithmeticService {
  rpc GetAddition(OperationParameters) returns (Answer) {}
  rpc GetSubtraction(OperationParameters) returns (Answer) {}
  rpc GetMultiplication(OperationParameters) returns (Answer) {}
  rpc GetDivision(OperationParameters) returns (Answer) {}
}
