syntax = "proto3";

package pb;

option go_package = "./pb";

message Answer {
  int32 value = 1;
}

message OperationParameters {
  int32 a = 1;
  int32 b = 2;
}
